grammar/GLSLParser.py
# Generated from GLSL.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GLSLParser ( Parser ):

    grammarFileName = "GLSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'print'", "':'", "'return'", "'uniform'", 
                     "'const'", "'true'", "'false'", "'struct'", "'if'", 
                     "'else'", "'switch'", "'case'", "'default'", "'while'", 
                     "'do'", "'for'", "'continue'", "'break'", "'void'", 
                     "'float'", "'int'", "'uint'", "'bool'", "'vec2'", "'vec3'", 
                     "'vec4'", "<INVALID>", "'mat2x3'", "'mat2x4'", "'mat3x2'", 
                     "<INVALID>", "'mat3x4'", "'mat4x2'", "'mat4x3'", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "';'", "'['", "']'", "','", 
                     "'.'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'~'", 
                     "'<'", "'>'", "'&'", "'|'", "'^'", "'++'", "'--'", 
                     "'<<'", "'>>'", "'<='", "'>='", "'=='", "'!='", "'&&'", 
                     "'^^'", "'||'", "'='", "'*='", "'/='", "'%='", "'+='", 
                     "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='" ]

    symbolicNames = [ "<INVALID>", "PRINT", "COLON", "RETURN", "UNIFORM", 
                      "CONST_TOK", "TRUE", "FALSE", "STRUCT", "IF", "ELSE", 
                      "SWITCH", "CASE", "DEFAULT", "WHILE", "DO", "FOR", 
                      "CONTINUE", "BREAK", "TYPE_VOID", "TYPE_FLOAT", "TYPE_INT", 
                      "TYPE_UINT", "TYPE_BOOL", "TYPE_VEC2", "TYPE_VEC3", 
                      "TYPE_VEC4", "TYPE_MAT2X2", "TYPE_MAT2X3", "TYPE_MAT2X4", 
                      "TYPE_MAT3X2", "TYPE_MAT3X3", "TYPE_MAT3X4", "TYPE_MAT4X2", 
                      "TYPE_MAT4X3", "TYPE_MAT4X4", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "SEMICOLON", "LBRACKET", "RBRACKET", 
                      "COMMA", "DOT", "OPERATOR_ADD", "OPERATOR_SUB", "OPERATOR_MUL", 
                      "OPERATOR_DIV", "OPERATOR_MOD", "OPERATOR_NOT", "OPERATOR_BNOT", 
                      "OPERATOR_LT", "OPERATOR_GT", "OPERATOR_BAND", "OPERATOR_BOR", 
                      "OPERATOR_BXOR", "OPERATOR_INC", "OPERATOR_DEC", "OPERATOR_LSHIFT", 
                      "OPERATOR_RSHIFT", "OPERATOR_LE", "OPERATOR_GE", "OPERATOR_EQ", 
                      "OPERATOR_NE", "OPERATOR_AND", "OPERATOR_XOR", "OPERATOR_OR", 
                      "OPERATOR_ASSIGN", "OPERATOR_MUL_ASSIGN", "OPERATOR_DIV_ASSIGN", 
                      "OPERATOR_MOD_ASSIGN", "OPERATOR_ADD_ASSIGN", "OPERATOR_SUB_ASSIGN", 
                      "OPERATOR_LSHIFT_ASSIGN", "OPERATOR_RSHIFT_ASSIGN", 
                      "OPERATOR_AND_ASSIGN", "OPERATOR_XOR_ASSIGN", "OPERATOR_OR_ASSIGN", 
                      "IDENTIFIER", "FLOAT", "INTEGER", "OCTAL", "HEX", 
                      "DIGIT", "COMMENT", "WS", "EOL" ]

    RULE_translation = 0
    RULE_uniform = 1
    RULE_function = 2
    RULE_function_parameter = 3
    RULE_statement = 4
    RULE_block_statement = 5
    RULE_variable_declaration = 6
    RULE_expression = 7
    RULE_literal = 8
    RULE_function_call = 9
    RULE_if_statement = 10
    RULE_while_statement = 11
    RULE_function_return = 12
    RULE_encapsulated_expression = 13
    RULE_variable_type = 14

    ruleNames =  [ "translation", "uniform", "function", "function_parameter", 
                   "statement", "block_statement", "variable_declaration", 
                   "expression", "literal", "function_call", "if_statement", 
                   "while_statement", "function_return", "encapsulated_expression", 
                   "variable_type" ]

    EOF = Token.EOF
    PRINT=1
    COLON=2
    RETURN=3
    UNIFORM=4
    CONST_TOK=5
    TRUE=6
    FALSE=7
    STRUCT=8
    IF=9
    ELSE=10
    SWITCH=11
    CASE=12
    DEFAULT=13
    WHILE=14
    DO=15
    FOR=16
    CONTINUE=17
    BREAK=18
    TYPE_VOID=19
    TYPE_FLOAT=20
    TYPE_INT=21
    TYPE_UINT=22
    TYPE_BOOL=23
    TYPE_VEC2=24
    TYPE_VEC3=25
    TYPE_VEC4=26
    TYPE_MAT2X2=27
    TYPE_MAT2X3=28
    TYPE_MAT2X4=29
    TYPE_MAT3X2=30
    TYPE_MAT3X3=31
    TYPE_MAT3X4=32
    TYPE_MAT4X2=33
    TYPE_MAT4X3=34
    TYPE_MAT4X4=35
    LPAREN=36
    RPAREN=37
    LBRACE=38
    RBRACE=39
    SEMICOLON=40
    LBRACKET=41
    RBRACKET=42
    COMMA=43
    DOT=44
    OPERATOR_ADD=45
    OPERATOR_SUB=46
    OPERATOR_MUL=47
    OPERATOR_DIV=48
    OPERATOR_MOD=49
    OPERATOR_NOT=50
    OPERATOR_BNOT=51
    OPERATOR_LT=52
    OPERATOR_GT=53
    OPERATOR_BAND=54
    OPERATOR_BOR=55
    OPERATOR_BXOR=56
    OPERATOR_INC=57
    OPERATOR_DEC=58
    OPERATOR_LSHIFT=59
    OPERATOR_RSHIFT=60
    OPERATOR_LE=61
    OPERATOR_GE=62
    OPERATOR_EQ=63
    OPERATOR_NE=64
    OPERATOR_AND=65
    OPERATOR_XOR=66
    OPERATOR_OR=67
    OPERATOR_ASSIGN=68
    OPERATOR_MUL_ASSIGN=69
    OPERATOR_DIV_ASSIGN=70
    OPERATOR_MOD_ASSIGN=71
    OPERATOR_ADD_ASSIGN=72
    OPERATOR_SUB_ASSIGN=73
    OPERATOR_LSHIFT_ASSIGN=74
    OPERATOR_RSHIFT_ASSIGN=75
    OPERATOR_AND_ASSIGN=76
    OPERATOR_XOR_ASSIGN=77
    OPERATOR_OR_ASSIGN=78
    IDENTIFIER=79
    FLOAT=80
    INTEGER=81
    OCTAL=82
    HEX=83
    DIGIT=84
    COMMENT=85
    WS=86
    EOL=87

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TranslationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def uniform(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GLSLParser.UniformContext)
            else:
                return self.getTypedRuleContext(GLSLParser.UniformContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GLSLParser.FunctionContext)
            else:
                return self.getTypedRuleContext(GLSLParser.FunctionContext,i)


        def getRuleIndex(self):
            return GLSLParser.RULE_translation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranslation" ):
                return visitor.visitTranslation(self)
            else:
                return visitor.visitChildren(self)




    def translation(self):

        localctx = GLSLParser.TranslationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_translation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GLSLParser.UNIFORM:
                self.state = 30
                self.uniform()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GLSLParser.TYPE_VOID) | (1 << GLSLParser.TYPE_FLOAT) | (1 << GLSLParser.TYPE_INT) | (1 << GLSLParser.TYPE_UINT) | (1 << GLSLParser.TYPE_BOOL) | (1 << GLSLParser.TYPE_VEC2) | (1 << GLSLParser.TYPE_VEC3) | (1 << GLSLParser.TYPE_VEC4) | (1 << GLSLParser.TYPE_MAT2X2) | (1 << GLSLParser.TYPE_MAT2X3) | (1 << GLSLParser.TYPE_MAT2X4) | (1 << GLSLParser.TYPE_MAT3X2) | (1 << GLSLParser.TYPE_MAT3X3) | (1 << GLSLParser.TYPE_MAT3X4) | (1 << GLSLParser.TYPE_MAT4X2) | (1 << GLSLParser.TYPE_MAT4X3) | (1 << GLSLParser.TYPE_MAT4X4))) != 0):
                self.state = 36
                self.function()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UniformContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNIFORM(self):
            return self.getToken(GLSLParser.UNIFORM, 0)

        def IDENTIFIER(self):
            return self.getToken(GLSLParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(GLSLParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return GLSLParser.RULE_uniform

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUniform" ):
                return visitor.visitUniform(self)
            else:
                return visitor.visitChildren(self)




    def uniform(self):

        localctx = GLSLParser.UniformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_uniform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(GLSLParser.UNIFORM)
            self.state = 43
            self.match(GLSLParser.IDENTIFIER)
            self.state = 44
            self.match(GLSLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_type(self):
            return self.getTypedRuleContext(GLSLParser.Variable_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(GLSLParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(GLSLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(GLSLParser.RPAREN, 0)

        def block_statement(self):
            return self.getTypedRuleContext(GLSLParser.Block_statementContext,0)


        def function_parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GLSLParser.Function_parameterContext)
            else:
                return self.getTypedRuleContext(GLSLParser.Function_parameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GLSLParser.COMMA)
            else:
                return self.getToken(GLSLParser.COMMA, i)

        def getRuleIndex(self):
            return GLSLParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = GLSLParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.variable_type()
            self.state = 47
            self.match(GLSLParser.IDENTIFIER)
            self.state = 48
            self.match(GLSLParser.LPAREN)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GLSLParser.TYPE_VOID) | (1 << GLSLParser.TYPE_FLOAT) | (1 << GLSLParser.TYPE_INT) | (1 << GLSLParser.TYPE_UINT) | (1 << GLSLParser.TYPE_BOOL) | (1 << GLSLParser.TYPE_VEC2) | (1 << GLSLParser.TYPE_VEC3) | (1 << GLSLParser.TYPE_VEC4) | (1 << GLSLParser.TYPE_MAT2X2) | (1 << GLSLParser.TYPE_MAT2X3) | (1 << GLSLParser.TYPE_MAT2X4) | (1 << GLSLParser.TYPE_MAT3X2) | (1 << GLSLParser.TYPE_MAT3X3) | (1 << GLSLParser.TYPE_MAT3X4) | (1 << GLSLParser.TYPE_MAT4X2) | (1 << GLSLParser.TYPE_MAT4X3) | (1 << GLSLParser.TYPE_MAT4X4))) != 0):
                self.state = 49
                self.function_parameter()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GLSLParser.COMMA:
                    self.state = 50
                    self.match(GLSLParser.COMMA)
                    self.state = 51
                    self.function_parameter()
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 59
            self.match(GLSLParser.RPAREN)
            self.state = 60
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_type(self):
            return self.getTypedRuleContext(GLSLParser.Variable_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(GLSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GLSLParser.RULE_function_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_parameter" ):
                return visitor.visitFunction_parameter(self)
            else:
                return visitor.visitChildren(self)




    def function_parameter(self):

        localctx = GLSLParser.Function_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.variable_type()
            self.state = 63
            self.match(GLSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_statement(self):
            return self.getTypedRuleContext(GLSLParser.Block_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(GLSLParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(GLSLParser.While_statementContext,0)


        def SEMICOLON(self):
            return self.getToken(GLSLParser.SEMICOLON, 0)

        def variable_declaration(self):
            return self.getTypedRuleContext(GLSLParser.Variable_declarationContext,0)


        def expression(self):
            return self.getTypedRuleContext(GLSLParser.ExpressionContext,0)


        def function_return(self):
            return self.getTypedRuleContext(GLSLParser.Function_returnContext,0)


        def getRuleIndex(self):
            return GLSLParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = GLSLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GLSLParser.LBRACE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.block_statement()
                pass
            elif token in [GLSLParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.if_statement()
                pass
            elif token in [GLSLParser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.while_statement()
                pass
            elif token in [GLSLParser.PRINT, GLSLParser.RETURN, GLSLParser.TRUE, GLSLParser.FALSE, GLSLParser.TYPE_VOID, GLSLParser.TYPE_FLOAT, GLSLParser.TYPE_INT, GLSLParser.TYPE_UINT, GLSLParser.TYPE_BOOL, GLSLParser.TYPE_VEC2, GLSLParser.TYPE_VEC3, GLSLParser.TYPE_VEC4, GLSLParser.TYPE_MAT2X2, GLSLParser.TYPE_MAT2X3, GLSLParser.TYPE_MAT2X4, GLSLParser.TYPE_MAT3X2, GLSLParser.TYPE_MAT3X3, GLSLParser.TYPE_MAT3X4, GLSLParser.TYPE_MAT4X2, GLSLParser.TYPE_MAT4X3, GLSLParser.TYPE_MAT4X4, GLSLParser.LPAREN, GLSLParser.OPERATOR_SUB, GLSLParser.IDENTIFIER, GLSLParser.FLOAT, GLSLParser.INTEGER, GLSLParser.OCTAL, GLSLParser.HEX]:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 68
                    self.variable_declaration()
                    pass

                elif la_ == 2:
                    self.state = 69
                    self.expression(0)
                    pass

                elif la_ == 3:
                    self.state = 70
                    self.function_return()
                    pass


                self.state = 73
                self.match(GLSLParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(GLSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(GLSLParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GLSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(GLSLParser.StatementContext,i)


        def getRuleIndex(self):
            return GLSLParser.RULE_block_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_statement" ):
                return visitor.visitBlock_statement(self)
            else:
                return visitor.visitChildren(self)




    def block_statement(self):

        localctx = GLSLParser.Block_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(GLSLParser.LBRACE)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GLSLParser.PRINT) | (1 << GLSLParser.RETURN) | (1 << GLSLParser.TRUE) | (1 << GLSLParser.FALSE) | (1 << GLSLParser.IF) | (1 << GLSLParser.WHILE) | (1 << GLSLParser.TYPE_VOID) | (1 << GLSLParser.TYPE_FLOAT) | (1 << GLSLParser.TYPE_INT) | (1 << GLSLParser.TYPE_UINT) | (1 << GLSLParser.TYPE_BOOL) | (1 << GLSLParser.TYPE_VEC2) | (1 << GLSLParser.TYPE_VEC3) | (1 << GLSLParser.TYPE_VEC4) | (1 << GLSLParser.TYPE_MAT2X2) | (1 << GLSLParser.TYPE_MAT2X3) | (1 << GLSLParser.TYPE_MAT2X4) | (1 << GLSLParser.TYPE_MAT3X2) | (1 << GLSLParser.TYPE_MAT3X3) | (1 << GLSLParser.TYPE_MAT3X4) | (1 << GLSLParser.TYPE_MAT4X2) | (1 << GLSLParser.TYPE_MAT4X3) | (1 << GLSLParser.TYPE_MAT4X4) | (1 << GLSLParser.LPAREN) | (1 << GLSLParser.LBRACE) | (1 << GLSLParser.OPERATOR_SUB))) != 0) or ((((_la - 79)) & ~0x3f) == 0 and ((1 << (_la - 79)) & ((1 << (GLSLParser.IDENTIFIER - 79)) | (1 << (GLSLParser.FLOAT - 79)) | (1 << (GLSLParser.INTEGER - 79)) | (1 << (GLSLParser.OCTAL - 79)) | (1 << (GLSLParser.HEX - 79)))) != 0):
                self.state = 78
                self.statement()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(GLSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_type(self):
            return self.getTypedRuleContext(GLSLParser.Variable_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(GLSLParser.IDENTIFIER, 0)

        def OPERATOR_ASSIGN(self):
            return self.getToken(GLSLParser.OPERATOR_ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(GLSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GLSLParser.RULE_variable_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = GLSLParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.variable_type()
            self.state = 87
            self.match(GLSLParser.IDENTIFIER)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GLSLParser.OPERATOR_ASSIGN:
                self.state = 88
                self.match(GLSLParser.OPERATOR_ASSIGN)
                self.state = 89
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GLSLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GLSLParser.ExpressionContext,i)


        def OPERATOR_SUB(self):
            return self.getToken(GLSLParser.OPERATOR_SUB, 0)

        def literal(self):
            return self.getTypedRuleContext(GLSLParser.LiteralContext,0)


        def function_call(self):
            return self.getTypedRuleContext(GLSLParser.Function_callContext,0)


        def encapsulated_expression(self):
            return self.getTypedRuleContext(GLSLParser.Encapsulated_expressionContext,0)


        def IDENTIFIER(self):
            return self.getToken(GLSLParser.IDENTIFIER, 0)

        def OPERATOR_MUL(self):
            return self.getToken(GLSLParser.OPERATOR_MUL, 0)

        def OPERATOR_DIV(self):
            return self.getToken(GLSLParser.OPERATOR_DIV, 0)

        def OPERATOR_MOD(self):
            return self.getToken(GLSLParser.OPERATOR_MOD, 0)

        def OPERATOR_ADD(self):
            return self.getToken(GLSLParser.OPERATOR_ADD, 0)

        def OPERATOR_LT(self):
            return self.getToken(GLSLParser.OPERATOR_LT, 0)

        def OPERATOR_GT(self):
            return self.getToken(GLSLParser.OPERATOR_GT, 0)

        def OPERATOR_LE(self):
            return self.getToken(GLSLParser.OPERATOR_LE, 0)

        def OPERATOR_GE(self):
            return self.getToken(GLSLParser.OPERATOR_GE, 0)

        def OPERATOR_EQ(self):
            return self.getToken(GLSLParser.OPERATOR_EQ, 0)

        def OPERATOR_NE(self):
            return self.getToken(GLSLParser.OPERATOR_NE, 0)

        def OPERATOR_ASSIGN(self):
            return self.getToken(GLSLParser.OPERATOR_ASSIGN, 0)

        def OPERATOR_ADD_ASSIGN(self):
            return self.getToken(GLSLParser.OPERATOR_ADD_ASSIGN, 0)

        def OPERATOR_SUB_ASSIGN(self):
            return self.getToken(GLSLParser.OPERATOR_SUB_ASSIGN, 0)

        def OPERATOR_MUL_ASSIGN(self):
            return self.getToken(GLSLParser.OPERATOR_MUL_ASSIGN, 0)

        def OPERATOR_DIV_ASSIGN(self):
            return self.getToken(GLSLParser.OPERATOR_DIV_ASSIGN, 0)

        def OPERATOR_MOD_ASSIGN(self):
            return self.getToken(GLSLParser.OPERATOR_MOD_ASSIGN, 0)

        def DOT(self):
            return self.getToken(GLSLParser.DOT, 0)

        def getRuleIndex(self):
            return GLSLParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GLSLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 93
                self.match(GLSLParser.OPERATOR_SUB)
                self.state = 94
                self.expression(11)
                pass

            elif la_ == 2:
                self.state = 95
                self.literal()
                pass

            elif la_ == 3:
                self.state = 96
                self.function_call()
                pass

            elif la_ == 4:
                self.state = 97
                self.encapsulated_expression()
                pass

            elif la_ == 5:
                self.state = 98
                self.match(GLSLParser.IDENTIFIER)
                pass

